--- a/SeSacTMDBProject/Cell/SearchResultCollectionViewCell.xib
+++ b/SeSacTMDBProject/Cell/SearchResultCollectionViewCell.xib
@@ -24,9 +24,9 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="# TEXT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2rS-7K-WqE">
-                        <rect key="frame" x="20" y="29.5" width="48.5" height="17"/>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="# Action" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2rS-7K-WqE">
+                        <rect key="frame" x="20" y="29.5" width="57.5" height="17"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -36,11 +36,12 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sRp-Pg-yIK" userLabel="Radius">
                                 <rect key="frame" x="0.0" y="0.0" width="302" height="351.5"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SBJ-lp-oT1">
-                                        <rect key="frame" x="0.0" y="0.0" width="302" height="245"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SBJ-lp-oT1">
+                                        <rect key="frame" x="0.0" y="0.0" width="302" height="228.5"/>
+                                        <color key="backgroundColor" red="0.8271417942" green="0.93856292519999995" blue="0.91257440479999996" alpha="1" colorSpace="calibratedRGB"/>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="hTE-41-UqY">
-                                        <rect key="frame" x="10" y="215" width="50" height="20"/>
+                                        <rect key="frame" x="16" y="192.5" width="50" height="20"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="평점" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cVA-QS-0yq">
                                                 <rect key="frame" x="0.0" y="0.0" width="25" height="20"/>
@@ -65,7 +66,7 @@
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8.8" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zFt-sz-6nd">
                                                 <rect key="frame" x="25" y="0.0" width="25" height="20"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -90,63 +91,63 @@
                                             <constraint firstAttribute="height" constant="20" id="ANN-Vg-adq"/>
                                         </constraints>
                                     </stackView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TITLE : TITLE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ml-QA-qhd">
-                                        <rect key="frame" x="16" y="261" width="91" height="18"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="TITLE : TITLE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ml-QA-qhd">
+                                        <rect key="frame" x="16" y="244.5" width="93" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KNv-mG-PRB">
-                                        <rect key="frame" x="16" y="284" width="65" height="14.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KNv-mG-PRB">
+                                        <rect key="frame" x="16" y="267.5" width="65" height="14.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oiJ-Ra-Juv">
-                                        <rect key="frame" x="16" y="314.5" width="270" height="1"/>
+                                        <rect key="frame" x="16" y="298" width="270" height="1"/>
                                         <color key="backgroundColor" systemColor="labelColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="ITH-TU-Let"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P13-lK-wnk">
-                                        <rect key="frame" x="0.0" y="315.5" width="302" height="36"/>
+                                        <rect key="frame" x="0.0" y="299" width="302" height="52.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="자세히 보기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mkf-Vd-Nd4">
-                                                <rect key="frame" x="16" y="11" width="55.5" height="14.5"/>
+                                                <rect key="frame" x="16" y="16" width="55.5" height="20"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="KAt-wo-fFS">
-                                                <rect key="frame" x="266" y="10" width="20" height="16.5"/>
+                                                <rect key="frame" x="266" y="18" width="20" height="16.5"/>
                                                 <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="KAt-wo-fFS" secondAttribute="height" multiplier="1:1" id="a30-qt-BAP"/>
                                                 </constraints>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SCq-6U-ru6">
-                                                <rect key="frame" x="10" y="0.0" width="282" height="36"/>
+                                                <rect key="frame" x="10" y="0.0" width="282" height="52.5"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="SCq-6U-ru6" secondAttribute="trailing" constant="10" id="2Wb-un-YFj"/>
-                                            <constraint firstAttribute="bottom" secondItem="KAt-wo-fFS" secondAttribute="bottom" constant="8" id="5JS-az-8ao"/>
                                             <constraint firstItem="mkf-Vd-Nd4" firstAttribute="centerY" secondItem="P13-lK-wnk" secondAttribute="centerY" id="Bin-Xj-ma2"/>
+                                            <constraint firstItem="KAt-wo-fFS" firstAttribute="bottom" secondItem="mkf-Vd-Nd4" secondAttribute="bottom" id="Hfu-Wf-ar8"/>
                                             <constraint firstItem="mkf-Vd-Nd4" firstAttribute="leading" secondItem="P13-lK-wnk" secondAttribute="leading" constant="16" id="QYk-6j-SUo"/>
                                             <constraint firstItem="SCq-6U-ru6" firstAttribute="top" secondItem="P13-lK-wnk" secondAttribute="top" id="RoT-Qx-ogJ"/>
-                                            <constraint firstItem="KAt-wo-fFS" firstAttribute="top" secondItem="P13-lK-wnk" secondAttribute="top" constant="8" id="bJR-QP-ZLd"/>
                                             <constraint firstAttribute="trailing" secondItem="KAt-wo-fFS" secondAttribute="trailing" constant="16" id="h4x-jX-hyg"/>
                                             <constraint firstAttribute="bottom" secondItem="SCq-6U-ru6" secondAttribute="bottom" id="jk5-IL-QfI"/>
                                             <constraint firstItem="SCq-6U-ru6" firstAttribute="leading" secondItem="P13-lK-wnk" secondAttribute="leading" constant="10" id="q37-7K-QLH"/>
+                                            <constraint firstItem="KAt-wo-fFS" firstAttribute="top" secondItem="mkf-Vd-Nd4" secondAttribute="top" id="xYB-m5-g5W"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="hTE-41-UqY" firstAttribute="bottom" secondItem="SBJ-lp-oT1" secondAttribute="bottom" constant="-10" id="7Tw-ch-XHO"/>
+                                    <constraint firstItem="hTE-41-UqY" firstAttribute="bottom" secondItem="SBJ-lp-oT1" secondAttribute="bottom" constant="-16" id="7Tw-ch-XHO"/>
                                     <constraint firstAttribute="trailing" secondItem="P13-lK-wnk" secondAttribute="trailing" id="97j-Ib-vjt"/>
                                     <constraint firstItem="SBJ-lp-oT1" firstAttribute="top" secondItem="sRp-Pg-yIK" secondAttribute="top" id="9ZZ-2z-fFa"/>
                                     <constraint firstItem="P13-lK-wnk" firstAttribute="leading" secondItem="sRp-Pg-yIK" secondAttribute="leading" id="AN9-gM-hUB"/>
@@ -154,9 +155,10 @@
                                     <constraint firstAttribute="bottom" secondItem="P13-lK-wnk" secondAttribute="bottom" id="KMN-21-3Ti"/>
                                     <constraint firstItem="KNv-mG-PRB" firstAttribute="top" secondItem="8ml-QA-qhd" secondAttribute="bottom" constant="5" id="Mvs-bw-J5h"/>
                                     <constraint firstItem="SBJ-lp-oT1" firstAttribute="leading" secondItem="sRp-Pg-yIK" secondAttribute="leading" id="O4j-89-Rw5"/>
-                                    <constraint firstItem="hTE-41-UqY" firstAttribute="leading" secondItem="SBJ-lp-oT1" secondAttribute="leading" constant="10" id="O5d-s5-caJ"/>
+                                    <constraint firstItem="hTE-41-UqY" firstAttribute="leading" secondItem="SBJ-lp-oT1" secondAttribute="leading" constant="16" id="O5d-s5-caJ"/>
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="8ml-QA-qhd" secondAttribute="trailing" constant="16" id="QnC-4i-R0s"/>
                                     <constraint firstItem="KNv-mG-PRB" firstAttribute="leading" secondItem="8ml-QA-qhd" secondAttribute="leading" id="Qtr-2E-oiw"/>
+                                    <constraint firstItem="SBJ-lp-oT1" firstAttribute="height" secondItem="sRp-Pg-yIK" secondAttribute="height" multiplier="0.65" id="Slu-Eg-nHz"/>
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="KNv-mG-PRB" secondAttribute="trailing" constant="12" id="T91-vj-q8e"/>
                                     <constraint firstItem="oiJ-Ra-Juv" firstAttribute="leading" secondItem="sRp-Pg-yIK" secondAttribute="leading" constant="16" id="iKp-y4-kHJ"/>
                                     <constraint firstItem="P13-lK-wnk" firstAttribute="top" secondItem="oiJ-Ra-Juv" secondAttribute="bottom" id="p5H-Fp-0F0"/>
