--- a/SeSacTMDBProject/XIB/PersonInfoCell/PersonInfoTableViewCell.xib
+++ b/SeSacTMDBProject/XIB/PersonInfoCell/PersonInfoTableViewCell.xib
@@ -10,15 +10,53 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PersonInfoTableViewCell" id="KGk-i7-Jjw" customClass="PersonInfoTableViewCell" customModule="SeSacTMDBProject" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PersonInfoTableViewCell" rowHeight="115" id="KGk-i7-Jjw" customClass="PersonInfoTableViewCell" customModule="SeSacTMDBProject" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="115"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="115"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nxo-8X-Ef7">
+                        <rect key="frame" x="12" y="8" width="74.5" height="99"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="Nxo-8X-Ef7" secondAttribute="height" multiplier="3:4" id="2Xi-JF-ZH3"/>
+                        </constraints>
+                    </imageView>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="aN7-gU-DKJ">
+                        <rect key="frame" x="98.5" y="37" width="47.5" height="41.5"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NAME" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PYU-SA-fHL">
+                                <rect key="frame" x="0.0" y="0.0" width="47.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TEXT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kY3-Ze-LGn">
+                                <rect key="frame" x="0.0" y="24.5" width="47.5" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="aN7-gU-DKJ" secondAttribute="trailing" constant="12" id="0QQ-Gq-2Sc"/>
+                    <constraint firstItem="Nxo-8X-Ef7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="2ms-Jx-p4s"/>
+                    <constraint firstItem="aN7-gU-DKJ" firstAttribute="leading" secondItem="Nxo-8X-Ef7" secondAttribute="trailing" constant="12" id="Kwz-Ta-hn7"/>
+                    <constraint firstAttribute="bottom" secondItem="Nxo-8X-Ef7" secondAttribute="bottom" constant="8" id="OdV-n8-Tid"/>
+                    <constraint firstItem="Nxo-8X-Ef7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="T7A-nK-gwy"/>
+                    <constraint firstItem="aN7-gU-DKJ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ZDL-VG-N4h"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="139" y="115"/>
+            <connections>
+                <outlet property="detailInfoLabel" destination="kY3-Ze-LGn" id="hdR-rR-m3i"/>
+                <outlet property="nameLabel" destination="PYU-SA-fHL" id="ol7-MN-M2O"/>
+                <outlet property="profileImage" destination="Nxo-8X-Ef7" id="QYC-qr-QA8"/>
+            </connections>
+            <point key="canvasLocation" x="137.68115942028987" y="138.28125"/>
         </tableViewCell>
     </objects>
 </document>
