--- a/SeSacTMDBProject/XIB/MovieList (TableView, CollectionView)/TableViewCell/MovieListTableViewCell.xib
+++ b/SeSacTMDBProject/XIB/MovieList (TableView, CollectionView)/TableViewCell/MovieListTableViewCell.xib
@@ -5,20 +5,60 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieListTableViewCell" id="KGk-i7-Jjw" customClass="MovieListTableViewCell" customModule="SeSacTMDBProject" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieListTableViewCell" rowHeight="161" id="KGk-i7-Jjw" customClass="MovieListTableViewCell" customModule="SeSacTMDBProject" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="161"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="161"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Sj-Zl-Vc1">
+                        <rect key="frame" x="8" y="16" width="304" height="24"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="24" id="9FU-2x-APy"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="XP0-s3-Hc4">
+                        <rect key="frame" x="0.0" y="48" width="320" height="105"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="MaH-FZ-84j">
+                            <size key="itemSize" width="128" height="128"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                    </collectionView>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="7Sj-Zl-Vc1" secondAttribute="trailing" constant="8" id="0lz-JP-bRG"/>
+                    <constraint firstItem="XP0-s3-Hc4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="J2X-Sy-yCu"/>
+                    <constraint firstItem="XP0-s3-Hc4" firstAttribute="top" secondItem="7Sj-Zl-Vc1" secondAttribute="bottom" constant="8" id="M2B-O6-sZG"/>
+                    <constraint firstAttribute="bottom" secondItem="XP0-s3-Hc4" secondAttribute="bottom" constant="8" id="Plr-cP-VXD"/>
+                    <constraint firstAttribute="trailing" secondItem="XP0-s3-Hc4" secondAttribute="trailing" id="fAM-K6-bJw"/>
+                    <constraint firstItem="7Sj-Zl-Vc1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="r1G-bb-Rma"/>
+                    <constraint firstItem="7Sj-Zl-Vc1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="vgJ-cV-Afs"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="137.68115942028987" y="126.5625"/>
+            <connections>
+                <outlet property="collectionView" destination="XP0-s3-Hc4" id="VGi-pm-aon"/>
+                <outlet property="titleLabel" destination="7Sj-Zl-Vc1" id="Nui-AI-0SF"/>
+            </connections>
+            <point key="canvasLocation" x="137.68115942028987" y="165.73660714285714"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
