추천 영화 ViewController) Poster Image 정보가 넘어오지 않은 경우, 기본 이미지로 설정

--- a/SeSacTMDBProject/XIB/PosterView.xib
+++ b/SeSacTMDBProject/XIB/PosterView.xib
@@ -20,6 +20,7 @@
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="K7s-6b-L3P">
                     <rect key="frame" x="0.0" y="0.0" width="264" height="325"/>
+                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
